# tantivy-demo

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  reference.md
src/: main.rs
