[package]
name = "tantivy-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tantivy = "0.22"
arc-swap = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
anyhow = "1.0"
env_logger = "0.11"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "rustls-tls"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }